click+drag on grease pencil in edit/sculpt/weight paint mode with cursor #56187

Closed
opened 2018-08-01 04:22:51 +02:00 by Kurtis Stryker · 6 comments

System Information
windows 7 pro sp1 with geforce gtx950

Blender Version
Blender 2.8 alpha

Short description of error
using cursor+drag in edit/sculpt/weight paint mode with grease pencil active crashes program.
you can click with the cursor, but the moment you start to drag the cursor it crashes.
Cursor works fine with other object types/modes. Only appears with active grease pencil.
Cursor works fine in draw mode in grease pencil.
All of the other tools in grease pencil work fine.

Exact steps for others to reproduce the error
add blank grease pencil object > go into edit/sculpt/weight paint mode> select cursor tool > click+ drag in viewport.

**System Information** windows 7 pro sp1 with geforce gtx950 **Blender Version** Blender 2.8 alpha **Short description of error** using cursor+drag in edit/sculpt/weight paint mode with grease pencil active crashes program. you can click with the cursor, but the moment you start to drag the cursor it crashes. Cursor works fine with other object types/modes. Only appears with active grease pencil. Cursor works fine in draw mode in grease pencil. All of the other tools in grease pencil work fine. **Exact steps for others to reproduce the error** add blank grease pencil object > go into edit/sculpt/weight paint mode> select cursor tool > click+ drag in viewport.
Author

Added subscriber: @KurtisStryker

Added subscriber: @KurtisStryker
Kurtis Stryker changed title from click and drag on grease pencil in edit/sculpt/weight paint mode with cursor to click+drag on grease pencil in edit/sculpt/weight paint mode with cursor 2018-08-01 04:31:32 +02:00
Antonio Vazquez was assigned by Bastien Montagne 2018-08-01 08:42:48 +02:00

Added subscriber: @andergrin

Added subscriber: @andergrin

This issue was referenced by c06bed25c7

This issue was referenced by c06bed25c70cb80657447e510890b29ceb6bbc1b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Was this merged into 0f449541d2 because I'm still getting this crash.

Was this merged into 0f449541d2e because I'm still getting this crash.

I don't think so. You need wait for tomorrow compilation.

I don't think so. You need wait for tomorrow compilation.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56187
No description provided.