Fix T56187: Crash using cursor tool in Edit/Sculpt and Weight Paint mode

The transform tried to calculate the multiframe falloff, but there was not any stroke to do that.